@@ -3,7 +3,6 @@ package com.github.drakepork.taskbot;
 import org.apache.commons.text.WordUtils;
 import org.javacord.api.DiscordApi;
 import org.javacord.api.DiscordApiBuilder;
-import org.javacord.api.entity.channel.PrivateChannel;
 import org.javacord.api.entity.message.Message;
 import org.javacord.api.entity.message.MessageBuilder;
 import org.javacord.api.entity.message.MessageFlag;
@@ -23,346 +22,195 @@ import java.time.*;
 import java.time.format.TextStyle;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
-import java.util.Date;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.logging.*;
+import java.util.stream.Collectors;
 
 
 public class MainBot {
     private static DatabaseHook db;
     private static DiscordApi api;
-    private static final HashMap<String, List<Long>> tasksPinged = new HashMap<>();
-    private static List<String> getOrder(String taskId) {
-        List<String> order = new ArrayList<>();
-        try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement(
-                "SELECT order_list FROM tasks WHERE task_name = ?")) {
-            ps.setString(1, taskId);
-            ResultSet rs = ps.executeQuery();
-            if (rs.next()) {
-                order.addAll(List.of(rs.getString(1).split(",")));
-            }
-        } catch (SQLException e) {
-            System.err.println("Couldn't get order list from database! Exiting...");
-            System.exit(1);
-        }
-        return order;
-    }
-    private static void setOrder(String taskId, List<String> order) {
-        try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement("UPDATE tasks SET order_list = ? WHERE task_name = ?")) {
-            ps.setString(1, String.join(",", order));
-            ps.setString(2, taskId);
-            ps.executeUpdate();
-        } catch (SQLException e) {
-            System.err.println("Couldn't update order list in database! Exiting...");
-            System.exit(1);
-        }
-    }
-    private static List<String> randomizedOrder(String excluding) {
-        List<String> order = new ArrayList<>();
-        try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement(
-                "SELECT discord FROM people WHERE discord <> ?")) {
-            ps.setLong(1, Long.parseLong(excluding));
-            ResultSet rs = ps.executeQuery();
-            while (rs.next()) {
-                order.add(String.valueOf(rs.getLong(1)));
-            }
-        } catch (SQLException e) {
-            System.err.println("Couldn't get discord ids from database! Exiting...");
-            System.exit(1);
-        }
-        Collections.shuffle(order);
-        return order;
-    }
-    private static void setNextPerson(String taskId) {
-        List<String> order = getOrder(taskId);
-        if(taskId.equalsIgnoreCase("rydde")) {
-            order.remove(0);
-            order.remove(0);
+    private static final Logger logger = Logger.getLogger(Logger.GLOBAL_LOGGER_NAME);
+    private static final List<Task> tasks = new ArrayList<>();
+    private static final List<Person> persons = new ArrayList<>();
+    private static void updateOrder(Task task) {
+        List<Person> order = task.getOrder();
+        if(task.isTeams()) {
+            order.removeFirst();
+            order.removeFirst();
             if(order.size() == 1) {
-                order.addAll(randomizedOrder(order.get(0)));
+                Person person = order.getFirst();
+                List<Person> randOrder = new ArrayList<>(persons);
+                randOrder.remove(person);
+                Collections.shuffle(randOrder);
+                order.addAll(randOrder);
             }
         } else {
-            String first = order.get(0);
-            order.remove(first);
-            order.add(first);
+            order.addLast(order.removeFirst());
         }
-        setOrder(taskId, order);
-        tasksPinged.remove(taskId);
-    }
-    private static String getName(Long person) {
-        String name = "";
-        try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement(
-                "SELECT person_name FROM people WHERE discord = ?")) {
-            ps.setLong(1, person);
-            ResultSet rs = ps.executeQuery();
-            if (rs.next()) {
-                name = rs.getString(1);
-            }
+        String peopleIds = order.stream()
+                .map(Person::getId).map(String::valueOf)
+                .collect(Collectors.joining(","));
+        try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement("UPDATE tasks SET order_list = ? WHERE task_name = ?")) {
+            ps.setString(1, peopleIds);
+            ps.setString(2, task.getName());
+            ps.executeUpdate();
+            task.setOrder(order);
         } catch (SQLException e) {
-            System.err.println("Couldn't get person's name from database! Exiting...");
-            System.exit(1);
+            logger.severe("Couldn't update order list in database!");
         }
-        return name;
     }
-    private static long getCurrentPerson(String taskId) {
-        return Long.parseLong(getOrder(taskId).get(0));
-    }
-    private static long getSecondPerson(String taskId) {
-        return Long.parseLong(getOrder(taskId).get(1));
-    }
-    private static void setNextPing(String taskId, long interval) {
+    private static void setNextPing(Task task) {
+        long interval = task.getInterval();
+        if(interval == 0) return;
+        ZonedDateTime dateTime = ZonedDateTime.of(LocalDate.now(), LocalTime.of(20, 0), ZoneId.systemDefault());
+        long nextPing = dateTime.toInstant().toEpochMilli() + interval;
         try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement(
                 "UPDATE tasks SET next_ping = ? WHERE task_name = ?")) {
-            ps.setLong(1, interval);
-            ps.setString(2, taskId);
+            ps.setLong(1, nextPing);
+            ps.setString(2, task.getName());
             ps.executeUpdate();
+            task.setNextPing(nextPing);
         } catch (SQLException e) {
-            System.err.println("Couldn't set next ping in database! Exiting...");
-            System.exit(1);
+            logger.severe("Couldn't set next ping in database!");
         }
+    }
+    private static boolean canUseCommands(User person) {
+        return persons.stream().anyMatch(p -> p.getId() == person.getId());
     }
     private static void autoPingTasksTimer() {
         Timer timer = new Timer();
         timer.scheduleAtFixedRate(new TimerTask() {
             public void run() {
-                Calendar cal = Calendar.getInstance();
-                int hour = cal.get(Calendar.HOUR_OF_DAY);
-                int minute = cal.get(Calendar.MINUTE);
-                boolean general = hour == 10 && minute < 4;
-                boolean dunkene = hour == 17 && minute < 4;
-                if(general || dunkene) {
-                    HashMap<String, List<Object>> tasks = new HashMap<>();
-                    try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement(
-                            "SELECT task_name, message_description, next_ping, ping_interval, order_list FROM tasks")) {
-                        ResultSet rs = ps.executeQuery();
-                        while (rs.next()) {
-                            long nextPing = rs.getLong(3);
-                            if(nextPing != 0) {
-                                List<Object> taskData = new ArrayList<>();
-                                taskData.add(rs.getString(2)); // msg 0
-                                taskData.add(nextPing); // next ping 1
-                                taskData.add(rs.getLong(4)); // interval 2
-                                taskData.add(rs.getString(5)); // order 3
-                                tasks.put(rs.getString(1), taskData);
-                            }
-                        }
-                    } catch (SQLException e) {
-                        System.err.println("Couldn't get tasks from database! Exiting...");
-                        System.exit(1);
+                LocalDateTime now = LocalDateTime.now();
+                int hour = now.getHour();
+                boolean general = hour == 10;
+                boolean dunkene = hour == 17;
+
+                if(!general && !dunkene) return;
+                List<Task> autoTasks = tasks.stream().filter(task -> task.getNextPing() != 0 &&
+                        ((general && task.isType("general")) || (dunkene && task.isType("dunk")))).toList();
+                for(Task task : autoTasks) {
+                    LocalDateTime pingDay = LocalDateTime.ofInstant(Instant.ofEpochMilli(task.getNextPing()), ZoneId.systemDefault());
+                    if(pingDay.isBefore(now)) {
+                        setNextPing(task);
+                        continue;
                     }
-                    if(!tasks.isEmpty()) {
-                        Calendar today = Calendar.getInstance();
-                        tasks.forEach((task, data) -> {
-                            boolean isGeneral = !task.toLowerCase().contains("dunkene");
-                            if((isGeneral && general) || (!isGeneral && dunkene)) {
-                                if (!tasksPinged.containsKey(task)) {
-                                    Calendar pingDay = Calendar.getInstance();
-                                    pingDay.setTime(new Date((long) data.get(1)));
-                                    if (today.get(Calendar.DAY_OF_YEAR) == pingDay.get(Calendar.DAY_OF_YEAR)) {
-                                        long person = getCurrentPerson(task);
-                                        String personName = getName(person);
-                                        if (!personName.isEmpty()) {
-                                            pingTask(task);
-                                        }
-                                    }
-                                } else if(isGeneral) {
-                                    long nextPing = (long) data.get(1);
-                                    if(System.currentTimeMillis() > nextPing) {
-                                        long interval = (long) data.get(2);
-                                        setNextPing(task, System.currentTimeMillis() + interval);
-                                    }
-                                }
-                            }
-                        });
-                    }
+                    if(task.isPinged() || now.getDayOfYear() != pingDay.getDayOfYear()) continue;
+                    pingTask(task);
                 }
             }
-        }, 0, TimeUnit.SECONDS.toMillis(30));
+        }, 0, TimeUnit.MINUTES.toMillis(5));
     }
-
     private static void pingedTasksTimer() {
         Timer timer = new Timer();
         timer.scheduleAtFixedRate(new TimerTask() {
             public void run() {
-                if(!tasksPinged.isEmpty()) {
-                    for(String task : tasksPinged.keySet()) {
-                        List<Long> pingData = tasksPinged.get(task);
-                        long pingedAt = pingData.get(0);
-                        long pingTime = TimeUnit.HOURS.toMillis(8) + pingedAt;
-                        boolean isDunker = task.toLowerCase().contains("dunkene");
-                        if(isDunker) pingTime = TimeUnit.MINUTES.toMillis(15) + pingedAt;
+                tasks.stream().filter(Task::isPinged).forEach(task -> {
+                    long pingTime = TimeUnit.HOURS.toMillis(8) + task.getLastPing();
+                    boolean isDunker = task.isType("dunk");
+                    if(isDunker) pingTime = TimeUnit.MINUTES.toMillis(15) + task.getLastPing();
 
-                        if (System.currentTimeMillis() > pingTime) {
-                            try {
-                                long person = getCurrentPerson(task);
-                                User user = api.getUserById(person).get();
-                                if(user.getPrivateChannel().isPresent()) {
-                                    long messageId = pingData.get(1);
-                                    PrivateChannel channel = user.getPrivateChannel().get();
-                                    Message message = channel.getMessageById(messageId).get();
-                                    MessageBuilder newMessage = new MessageBuilder();
-                                    newMessage.copy(message);
-                                    message.delete();
-                                    Message sentMessage = newMessage.send(user).get();
-                                    List<Long> newPingData = new ArrayList<>();
-                                    newPingData.add(System.currentTimeMillis());
-                                    newPingData.add(sentMessage.getId());
-                                    newPingData.add(pingData.get(2));
-                                    boolean teams = task.equalsIgnoreCase("rydde");
-                                    if(teams) {
-                                        long secPerson = getSecondPerson(task);
-                                        user = api.getUserById(secPerson).get();
-                                        if(user.getPrivateChannel().isPresent()) {
-                                            messageId = pingData.get(2);
-                                            channel = user.getPrivateChannel().get();
-                                            message = channel.getMessageById(messageId).get();
-                                            newMessage = new MessageBuilder();
-                                            newMessage.copy(message);
-                                            message.delete();
-                                            sentMessage = newMessage.send(user).get();
-                                            newPingData.add(sentMessage.getId());
-                                        }
-                                    }
-                                    tasksPinged.put(task, newPingData);
+                    if(pingTime > System.currentTimeMillis()) return;
+                    task.getMessages().forEach(Message::delete);
 
-                                    if(isDunker) {
-                                        ZonedDateTime firstPinged = Instant.ofEpochMilli(pingData.get(2))
-                                                .atZone(ZoneId.systemDefault());
-                                        ZonedDateTime now = ZonedDateTime.now();
+                    if(isDunker) {
+                        ZonedDateTime firstPinged = Instant.ofEpochMilli(task.getFirstPinged())
+                                .atZone(ZoneId.systemDefault());
+                        ZonedDateTime now = ZonedDateTime.now();
 
-                                        long hoursSinceFirstPinged = ChronoUnit.HOURS.between(firstPinged, now);
-                                        if(hoursSinceFirstPinged >= 18) {
-                                            setNextPerson(task);
-                                        }
-                                    }
-                                }
-                            } catch (InterruptedException | ExecutionException e) {
-                                System.err.println("Something went wrong when trying to repeat a task ping! Exiting...");
-                                System.exit(1);
-                            }
+                        long hoursSinceFirstPinged = ChronoUnit.HOURS.between(firstPinged, now);
+                        if(hoursSinceFirstPinged >= 18) {
+                            task.setPinged(false);
+                            return;
                         }
                     }
-                }
+                    sendTaskMsg(task);
+                    task.setLastPing(System.currentTimeMillis());
+                });
             }
-        }, 0, TimeUnit.SECONDS.toMillis(30));
+        }, 0, TimeUnit.MINUTES.toMillis(5));
     }
-    private static boolean canUseCommands(long person) {
-        return !getName(person).isEmpty();
-    }
-    public static String pingTask(String task) {
-        String secName = "";
-        try {
-            long person = getCurrentPerson(task);
-            String personName = getName(person);
-            User user = api.getUserById(person).get();
-            EmbedBuilder embed = new EmbedBuilder();
-            embed.setTitle("-= " + task.replace("_", " ").toUpperCase() + " TIME =-");
-            boolean teams = task.equalsIgnoreCase("rydde");
-            String desc = "";
-            User secUser = null;
-            if(teams) {
-                long secPerson = getSecondPerson(task);
-                secName  = getName(secPerson);
-                secUser = api.getUserById(secPerson).get();
+    private static void sendTaskMsg(Task task) {
+        logger.info("Sending " + task.getName() + " task message");
+        EmbedBuilder embed = new EmbedBuilder();
+        embed.setTitle("-= " + task.getName().replace("_", " ").toUpperCase() + " TIME =-");
+
+        MessageBuilder msg = new MessageBuilder();
+        msg.addComponents(ActionRow.of(Button.success(task.getName(), "Trykk når du er ferdig")));
+
+        List<Message> messages = new ArrayList<>();
+        AtomicInteger i = new AtomicInteger(1);
+        task.getPingedPersons().forEach(person -> {
+            String desc = task.getDescription();
+            if(task.isTeams()) {
+                desc += "\n\nDIN LAG-KAMERAT ER: " + task.getPingedPersons().get(i.get()).getName();
+                i.getAndDecrement();
             }
-            long interval = 0;
-            try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement(
-                    "SELECT message_description, ping_interval FROM tasks WHERE task_name = ?")) {
-                ps.setString(1, task);
-                ResultSet rs = ps.executeQuery();
-                if (rs.next()) {
-                    desc = rs.getString(1);
-                    interval = rs.getLong(2);
-                    embed.setDescription(desc + (teams ? "\n\nDin lagkamerat er: " + secName : ""));
-                }
-            } catch (SQLException e) {
-                System.err.println("Couldn't get task from database! Exiting...");
-                System.exit(1);
-            }
-            MessageBuilder msg = new MessageBuilder();
+            embed.setDescription(desc);
             msg.setEmbed(embed);
-            msg.addComponents(ActionRow.of(Button.success(task, "Trykk når du er ferdig")));
-            Message sentMessage = msg.send(user).get();
-            List<Long> pingData = new ArrayList<>();
-            pingData.add(System.currentTimeMillis());
-            pingData.add(sentMessage.getId());
-            pingData.add(System.currentTimeMillis());
-            if(teams) {
-                embed.setDescription(desc + "\n\nDin lagkamerat er: " + personName);
-                msg.setEmbed(embed);
-                pingData.add(msg.send(secUser).get().getId());
+            Message message = msg.send(person.getUser()).exceptionally(e -> {logger.severe(e.getMessage()); return null;}).join();
+            if(message != null) {
+                messages.add(message);
+                logger.info("Sent message to " + person.getName());
+            } else {
+                logger.severe("Couldn't send message to " + person.getName());
+                persons.stream().filter(p -> p.getName().equalsIgnoreCase("andreas")).findFirst().ifPresent(p -> {
+                    MessageBuilder error = new MessageBuilder();
+                    error.setContent("Klarte ikke å sende melding til " + person.getName() + " for " + task.getName() + " task");
+                    error.send(p.getUser());
+                });
+                task.setPinged(false);
             }
-            tasksPinged.put(task, pingData);
-            if(interval != 0) {
-                setNextPing(task, System.currentTimeMillis() + interval);
-            }
-        } catch (InterruptedException | ExecutionException e) {
-            System.err.println("Something went wrong when pinging a task! Exiting...");
-            System.exit(1);
-        }
-        return secName;
+        });
+        task.setMessages(messages);
+        logger.info("Successfully sent " + task.getName() + " task message");
     }
-    private static void generateConfig(File configFile) {
-        Properties defaultConfig = getDefaultProperties();
-        try (FileOutputStream fos = new FileOutputStream(configFile)) {
-            defaultConfig.store(fos, "Default config values");
-            System.out.println("Successfully created the config file!");
-        } catch (IOException e) {
-            System.err.println("Error creating the config file! Exiting...");
-            System.exit(1);
-        }
+    public static void pingTask(Task task) {
+        logger.info("Pinging " + task.getName() + " task");
+        long pingTime = System.currentTimeMillis();
+
+        List<Person> peopleToPing = task.getOrder().subList(0, task.isTeams() ? 2 : 1);
+        task.setPinged(true);
+        task.setLastPing(pingTime);
+        task.setFirstPinged(pingTime);
+        task.setPingedPersons(peopleToPing);
+        setNextPing(task);
+        sendTaskMsg(task);
     }
     private static void sendStatus(SlashCommandInteraction slashInt) {
         StringBuilder desc = new StringBuilder();
-        HashMap<String, List<Object>> tasks = new HashMap<>();
-        try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement(
-                "SELECT task_name, message_description, next_ping, ping_interval, order_list FROM tasks")) {
-            ResultSet rs = ps.executeQuery();
-            while (rs.next()) {
-                List<Object> taskData = new ArrayList<>();
-                taskData.add(rs.getString(2)); // msg 0
-                taskData.add(rs.getLong(3)); // next ping 1
-                taskData.add(rs.getLong(4)); // interval 2
-                taskData.add(rs.getString(5)); // order 3
-                tasks.put(rs.getString(1), taskData);
+
+        tasks.forEach(task -> {
+            String peopleNames = task.isPinged() ? task.getPingedPersons().stream().map(Person::getName).collect(Collectors.joining(", "))
+                    : task.isTeams() ? (task.getOrder().getFirst().getName() + ", " + task.getOrder().get(1).getName()) : task.getOrder().getFirst().getName();
+            desc.append("**").append(WordUtils.capitalize(task.getName().replace("_", " "))).append("**\n")
+                    .append("- Er Pinget: ").append(task.isPinged() ? "Ja" : "Nei").append("\n")
+                    .append("- ").append(task.isPinged() ? "Pinget" : "Neste").append(" Person: ").append(peopleNames).append("\n");
+            if(task.isPinged()) {
+                long lastPinged = task.getLastPing();
+                long nextPing = lastPinged + (task.isType("dunk") ? TimeUnit.MINUTES.toMillis(15) : TimeUnit.HOURS.toMillis(8));
+
+                LocalDateTime currentTime = LocalDateTime.now();
+                LocalDateTime nextPingTime = LocalDateTime.ofInstant(Instant.ofEpochMilli(nextPing), ZoneId.systemDefault());
+                LocalDateTime lastPingTime = LocalDateTime.ofInstant(Instant.ofEpochMilli(lastPinged), ZoneId.systemDefault());
+                LocalDateTime firstPingTime = LocalDateTime.ofInstant(Instant.ofEpochMilli(task.getFirstPinged()), ZoneId.systemDefault());
+
+                String timeTillNextPing = formatDuration(currentTime, nextPingTime);
+                String timeSinceLastPing = formatDuration(lastPingTime, currentTime);
+                String timeSinceFirstPing = formatDuration(firstPingTime, currentTime);
+
+                desc.append("- Sist Pinget: ").append(timeSinceLastPing).append(" siden").append("\n")
+                        .append("- Neste Ping: ").append("Om ").append(timeTillNextPing).append("\n")
+                        .append("- Første Ping: ").append(timeSinceFirstPing).append(" siden").append("\n");
             }
-        } catch (SQLException e) {
-            System.err.println("Couldn't get tasks from database! Exiting...");
-            System.exit(1);
-        }
-
-        tasks.forEach((task, data) -> {
-            String personName = getName(getCurrentPerson(task));
-            boolean isPinged = tasksPinged.containsKey(task);
-
-            if(!personName.isEmpty()) {
-                desc.append("**").append(WordUtils.capitalize(task.replace("_", " "))).append("**\n")
-                        .append("- Er Pinget: ").append(isPinged ? "Ja" : "Nei").append("\n")
-                        .append("- ").append(isPinged ? "Pinget" : "Neste").append(" Person: ").append(personName).append("\n");
-                if(isPinged) {
-                    long lastPinged = tasksPinged.get(task).get(0);
-                    long nextPing = lastPinged + (task.contains("dunkene") ? TimeUnit.MINUTES.toMillis(15) : TimeUnit.HOURS.toMillis(8));
-                    LocalDateTime curr = LocalDateTime.now();
-                    LocalDateTime next = LocalDateTime.ofInstant(Instant.ofEpochMilli(nextPing), ZoneId.systemDefault());
-                    long minutesTill = curr.until(next, ChronoUnit.MINUTES);
-                    long hoursTill = (minutesTill / 60);
-                    long minsTill = (minutesTill % 60);
-                    LocalDateTime prev = LocalDateTime.ofInstant(Instant.ofEpochMilli(lastPinged), ZoneId.systemDefault());
-                    long minutesSince = prev.until(curr, ChronoUnit.MINUTES);
-                    long hoursSince = (minutesSince / 60);
-                    long minsSince = (minutesSince % 60);
-                    String timeTill = (minutesTill >= 60 ? hoursTill + " time" + (hoursTill != 1 ? "r, " : ", ") + minsTill + " minutt" + (minsTill != 1 ? "er" : "") : minutesTill + " minutt" + (minutesTill != 1 ? "er" : ""));
-                    String timeSince = (minutesSince >= 60 ? hoursSince + " time" + (hoursSince != 1 ? "r, " : ", ") + minsSince + " minutt" + (minsSince != 1 ? "er" : "") : minutesSince + " minutt" + (minutesSince != 1 ? "er" : ""));
-                    desc.append("- Sist Pinget: ").append(timeSince).append(" siden").append("\n")
-                            .append("- Neste Ping: ").append("Om ").append(timeTill).append("\n");
-                }
-                long autoPing = (long) data.get(1);
-                if(autoPing != 0) {
-                    LocalDateTime dateTime = LocalDateTime.ofInstant(Instant.ofEpochMilli(autoPing), ZoneId.systemDefault());
-                    int day = dateTime.getDayOfMonth();
-                    String month = dateTime.getMonth().getDisplayName(TextStyle.FULL, new Locale("no"));
-                    desc.append("- Neste Auto Ping: ").append(day).append(" ").append(month).append("\n");
-                }
+            long autoPing = task.getNextPing();
+            if(autoPing != 0) {
+                LocalDateTime dateTime = LocalDateTime.ofInstant(Instant.ofEpochMilli(autoPing), ZoneId.systemDefault());
+                int day = dateTime.getDayOfMonth();
+                String month = dateTime.getMonth().getDisplayName(TextStyle.FULL, Locale.forLanguageTag("no-NO"));
+                desc.append("- Neste Auto Ping: ").append(day).append(" ").append(month).append("\n");
             }
         });
 
@@ -374,6 +222,16 @@ public class MainBot {
                 .setFlags(MessageFlag.EPHEMERAL)
                 .respond();
     }
+    private static String formatDuration(LocalDateTime start, LocalDateTime end) {
+        Duration duration = Duration.between(start, end);
+        long hours = duration.toHours();
+        long minutes = duration.toMinutes() % 60;
+        if (hours > 0) {
+            return hours + " time" + (hours != 1 ? "r, " : ", ") + minutes + " minutt" + (minutes != 1 ? "er" : "");
+        } else {
+            return minutes + " minutt" + (minutes != 1 ? "er" : "");
+        }
+    }
     private static Properties getDefaultProperties() {
         Properties defaultConfig = new Properties();
         defaultConfig.setProperty("database.ip", "");
@@ -384,7 +242,10 @@ public class MainBot {
         defaultConfig.setProperty("discord.token", "");
         return defaultConfig;
     }
-    public static void main(String[] args) {
+    private static Task getTask(String taskName) {
+        return tasks.stream().filter(task -> task.getName().equalsIgnoreCase(taskName)).findFirst().orElse(null);
+    }
+    private static void initialSetup() {
         Properties config = new Properties();
         String externalConfigPath = "./config.properties";
 
@@ -396,28 +257,50 @@ public class MainBot {
         try (FileInputStream fileStream = new FileInputStream(externalConfigPath)) {
             config.load(fileStream);
         } catch (IOException e) {
-            System.err.println("Config file doesn't exist or couldn't be loaded! Exiting...");
-            System.exit(1);
+            logger.severe("Config file doesn't exist or couldn't be loaded!");
         }
         String token = config.getProperty("discord.token");
         if(token == null || token.isEmpty()) {
-            System.err.println("Discord token not set! Exiting...");
-            System.exit(1);
+            logger.severe("Discord token not set!");
         }
         api = new DiscordApiBuilder()
                 .setToken(token)
                 .login().join();
         if(api == null) {
-            System.err.println("Failed to connect to Discord! Exiting...");
-            System.exit(1);
+            logger.severe("Failed to connect to Discord!");
         }
 
         db = new DatabaseHook(config);
+        try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement(
+                "SELECT * FROM people")) {
+            ResultSet rs = ps.executeQuery();
+            while (rs.next()) {
+                persons.add(new Person(rs.getString(2), api.getUserById(rs.getLong(1)).exceptionally(e -> null).join(), rs.getLong(1)));
+            }
+        } catch (SQLException e) {
+            logger.severe("Couldn't get people from database!");
+            logger.severe(e.getMessage());
+        }
 
-        FallbackLoggerConfiguration.setDebug(true);
-        FallbackLoggerConfiguration.setTrace(true);
-        pingedTasksTimer();
-        autoPingTasksTimer();
+        try (Connection conn = db.getConnection(); PreparedStatement ps = conn.prepareStatement(
+                "SELECT * FROM tasks")) {
+            ResultSet rs = ps.executeQuery();
+            while (rs.next()) {
+                String taskName = rs.getString(1);
+                String taskDesc = rs.getString(2);
+                String taskType = rs.getString(3);
+                List<Person> order = new ArrayList<>();
+                List<String> orderList = Arrays.asList(rs.getString(4).split(","));
+                orderList.forEach(person -> order.add(persons.stream().filter(p -> p.getId() == Long.parseLong(person)).findFirst().orElse(null)));
+                boolean isTeams = rs.getBoolean(5);
+                long nextPing = rs.getLong(6);
+                long interval = rs.getLong(7);
+                tasks.add(new Task(taskName, taskDesc, taskType, order, isTeams, nextPing, interval));
+            }
+        } catch (SQLException e) {
+            logger.severe("Couldn't get tasks from database!");
+            logger.severe(e.getMessage());
+        }
 
         SlashCommand.with("pingtask", "pinge tasks")
                 .setDefaultEnabledForPermissions(PermissionType.ADMINISTRATOR)
@@ -428,22 +311,56 @@ public class MainBot {
                 .createGlobal(api)
                 .join();
 
+
+        FallbackLoggerConfiguration.setDebug(true);
+        FallbackLoggerConfiguration.setTrace(true);
+        pingedTasksTimer();
+        autoPingTasksTimer();
+    }
+    private static void generateConfig(File configFile) {
+        Properties defaultConfig = getDefaultProperties();
+        try (FileOutputStream fos = new FileOutputStream(configFile)) {
+            defaultConfig.store(fos, "Default config values");
+            logger.info("Successfully created the config file!");
+        } catch (IOException e) {
+            logger.severe("Error creating the config file!");
+        }
+    }
+    public static void setupLogger() {
+        LogManager.getLogManager().reset();
+        ConsoleHandler consoleHandler = new ConsoleHandler();
+        consoleHandler.setLevel(Level.ALL);
+        consoleHandler.setFormatter(new SimpleFormatter());
+        logger.addHandler(consoleHandler);
+
+        try {
+            FileHandler fileHandler = new FileHandler("task.log", true);
+            fileHandler.setLevel(Level.ALL);
+            fileHandler.setFormatter(new SimpleFormatter());
+            logger.addHandler(fileHandler);
+        } catch (IOException e) {
+            logger.log(Level.SEVERE, "Error occur in FileHandler.", e);
+        }
+
+        logger.info("Logger setup complete.");
+    }
+    private static void createCommands() {
         api.addSlashCommandCreateListener(event -> {
             SlashCommandInteraction slashInt = event.getSlashCommandInteraction();
             User commandUser = slashInt.getUser();
-
-            if (canUseCommands(commandUser.getId())) {
+            if (canUseCommands(commandUser)) {
                 String cmd = slashInt.getCommandName().toLowerCase();
                 if(cmd.equals("pingtask")) {
                     slashInt.createImmediateResponder()
-                        .setContent("Velg hvilke tasks du vil pinge:")
-                        .addComponents(
-                            ActionRow.of(SelectMenu.createStringMenu("tasks", "Klikk for å vise tasks", 1, 1,
-                                Arrays.asList(SelectMenuOption.create("Restavfall", "restavfall", "Klikk her for å pinge Restavfall Task"),
-                                    SelectMenuOption.create("Papp", "papp", "Klikk her for å pinge Papp Task"),
-                                    SelectMenuOption.create("Metall", "metall", "Klikk her for å pinge Metall Task"),
-                                    SelectMenuOption.create("Matavfall", "matavfall", "Klikk her for å pinge Matavfall Task"),
-                                    SelectMenuOption.create("Rydde (Teams)", "rydde", "Klikk her for å pinge Rydde (Teams)")))))
+                            .setContent("Velg hvilke tasks du vil pinge:")
+                            .addComponents(
+                                    ActionRow.of(SelectMenu.createStringMenu("tasks", "Klikk for å vise tasks", 1, 1,
+                                            Arrays.asList(SelectMenuOption.create("Restavfall", "restavfall", "Klikk her for å pinge Restavfall Task"),
+                                                    SelectMenuOption.create("Papp", "papp", "Klikk her for å pinge Papp Task"),
+                                                    SelectMenuOption.create("Metall", "metall", "Klikk her for å pinge Metall Task"),
+                                                    SelectMenuOption.create("Matavfall", "matavfall", "Klikk her for å pinge Matavfall Task"),
+                                                    SelectMenuOption.create("Rydde (Teams)", "rydde", "Klikk her for å pinge Rydde (Teams)"),
+                                                    SelectMenuOption.create("Kjøkken Rydding", "kjøkken_rydding", "Klikk her for å pinge Kjøkken Rydding")))))
                             .setFlags(MessageFlag.EPHEMERAL)
                             .respond();
                 } else if(cmd.equals("pingstatus")) {
@@ -451,45 +368,59 @@ public class MainBot {
                 }
             } else {
                 slashInt.createImmediateResponder()
-                    .setContent("Trokkje du bør bruke denne her commanden asså")
-                    .setFlags(MessageFlag.EPHEMERAL)
-                    .respond();
+                        .setContent("Trokkje du bør bruke denne her commanden asså")
+                        .setFlags(MessageFlag.EPHEMERAL)
+                        .respond();
             }
         });
 
         api.addSelectMenuChooseListener(event -> {
-            List<SelectMenuOption> tasks = event.getSelectMenuInteraction().getChosenOptions();
-            tasks.forEach(taskOption -> {
-                String task = taskOption.getValue();
-                long person = getCurrentPerson(task);
-                String personName = getName(person);
-                if (!personName.isEmpty()) {
-                    if (!tasksPinged.containsKey(task)) {
-                        String secName = pingTask(task);
-                        event.getInteraction().createImmediateResponder().setContent("Pinget " + personName + (!secName.isEmpty() ? " og " + secName : "") + " om " + task)
-                                .setFlags(MessageFlag.EPHEMERAL).respond();
-                    } else {
-                        event.getInteraction().createImmediateResponder().setContent("Har allerede pinget " + task).setFlags(MessageFlag.EPHEMERAL).respond();
-                    }
+            List<SelectMenuOption> options = event.getSelectMenuInteraction().getChosenOptions();
+            options.forEach(taskOption -> {
+                Task task = getTask(taskOption.getValue());
+
+                if(task == null) return;
+                List<Person> people = task.getOrder().subList(0, task.isTeams() ? 2 : 1);
+                String peopleNames = people.stream()
+                        .map(Person::getName)
+                        .collect(Collectors.joining(", "));
+                if(task.isPinged()) {
+                    event.getInteraction().createImmediateResponder().setContent("Har allerede pinget " + peopleNames + " om " + task.getName()).setFlags(MessageFlag.EPHEMERAL).respond();
+                    return;
                 }
+
+                pingTask(task);
+                event.getInteraction().createImmediateResponder().setContent("Pinget " + peopleNames + " om " + task.getName()).setFlags(MessageFlag.EPHEMERAL).respond();
             });
         });
 
         api.addButtonClickListener(event -> {
-            ButtonInteraction messageComponentInteraction = event.getButtonInteraction();
-            String task = messageComponentInteraction.getCustomId();
-            long person = event.getInteraction().getUser().getId();
-            if ((!task.equalsIgnoreCase("rydde") && person == getCurrentPerson(task))
-                    || (task.equalsIgnoreCase("rydde") && tasksPinged.containsKey(task) && (person == getCurrentPerson(task) || person == getSecondPerson(task)))) {
-                messageComponentInteraction.getMessage().delete();
-                setNextPerson(task);
-                event.getInteraction().createImmediateResponder()
-                    .setContent(task + " listen har blitt oppdatert")
+            ButtonInteraction interaction = event.getButtonInteraction();
+            String taskId = interaction.getCustomId();
+            Task task = getTask(taskId);
+            if(task == null) return;
+
+            Person person = task.getPingedPersons().stream().filter(p -> p.getId() == interaction.getUser().getId()).findFirst().orElse(null);
+
+            if(!task.isPinged() || person == null) {
+                interaction.getMessage().delete();
+                return;
+            }
+
+            task.getMessages().forEach(Message::delete);
+            task.setPinged(false);
+            event.getInteraction().createImmediateResponder()
+                    .setContent(task.getName() + " listen har blitt oppdatert")
                     .setFlags(MessageFlag.EPHEMERAL)
                     .respond();
-            } else {
-                messageComponentInteraction.getMessage().delete();
-            }
+            updateOrder(task);
+            logger.info(person.getName() + " har fullført " + task.getName() + " task");
         });
+    }
+
+    public static void main(String[] args) {
+        setupLogger();
+        initialSetup();
+        createCommands();
     }
 }
